nobase_pkginclude_HEADERS = \
	bus/modbus.h\
	dts/stm32f10x.dtsi\
	dts/stm32f10x.h\
	dts/stm32f10x_gpio.h\
	dts/stm32f10x_tim.h\
	dts/stm32f4xx.dtsi\
	dts/stm32f4xx.h\
	dts/stm32f4xx_adc.h\
	dts/stm32f4xx_gpio.h\
	dts/stm32f4xx_tim.h\
	dts/canopen.h\
	libfdt/fdt.h\
	libfdt/libfdt.h\
	libfdt/libfdt_env.h\
	libfdt/libfdt_internal.h\
	linux/linux_serial.h\
	linux/linux_uart.h\
	types/avl-cmp.h\
	types/avl.h\
	types/list.h\
	types/timestamp.h\
	types/types.h\
	types/cbuf.h\
	control/derivative.h\
	control/integrator.h\
	control/lowpass.h\
	control/PID.h\
	thread/work.h\
	thread/thread.h\
	thread/mutex.h\
	thread/spinlock.h\
	thread/sem.h\
	thread/queue.h\
	atomic.h \
	adc.h\
	analog.h\
	baro.h\
	can.h\
	canopen.h\
	constrain.h\
	chip.h\
	console.h\
	display.h\
	driver.h\
	debug.h\
	eeprom.h\
	encoder.h\
	events.h\
	dx_tracker.h\
	gpio.h\
	i2c.h\
	imu.h\
	io.h\
	irq.h\
	leds.h\
	fw_math.h\
	memory.h\
	motor.h\
	mtd.h\
	pointer.h\
	pwm.h\
	regmap.h\
	rtc.h\
	serial.h\
	spi.h\
	termui.h\
	trig.h\
	ulink.h\
	vardir.h\
	usb.h\
	usb_cdc.h

